# qos

./: .git-blame-ignore-revs  .gitignore  Cargo.toml  Makefile  README.md
assemble-fs/: Cargo.toml  initramfs-config.yaml  rootfs-config.yaml
assemble-fs/src/: formats.rs  main.rs
assemble-initramfs/: Cargo.toml  README.md  config.yaml
assemble-initramfs/src/: main.rs
assemble-initramfs/src/cpio/: mod.rs
auth/: Cargo.toml  README.md
auth/docs/: SHA-crypt.txt
auth/src/: lib.rs  sha.rs
bus/: Cargo.toml  README.md
bus/busctl/: main.rs
bus/busd/: api.rs  main.rs
bus/lib/: lib.rs
bytestruct/: Cargo.toml
bytestruct/bytestruct-derive/: Cargo.toml
bytestruct/bytestruct-derive/src/: lib.rs
bytestruct/src/: lib.rs  macros.rs
cat/: Cargo.toml
cat/src/: main.rs
clear/: Cargo.toml
clear/src/: main.rs
common/: Cargo.toml  README.md
common/src/: io.rs  iter.rs  lib.rs  obs.rs  qinit.rs  rand.rs
compositor/: Cargo.toml
compositor/src/: bmp.rs  cursor.rs  keyboard.rs  main.rs
compositor/src/drm/: cstructs.rs  ioctls.rs  mod.rs
compositor/src/events/: drm.rs  event_threads.rs  input.rs  mod.rs  scm_bufreader.rs  wayland.rs
compositor/src/wayland/: buffer.rs  compositor.rs  display.rs  keyboard.rs  layout.rs  macros.rs  mod.rs  output.rs  pointer.rs  registry.rs  seat.rs  shm.rs  surface.rs  types.rs  xdg_surface.rs  xdg_toplevel.rs  xdg_wm_base.rs  zwlr_layer_shell_v1.rs
configs/: group  netd.conf.toml  passwd  shadow
configs/services/: base.sphere  busd.service  compositor.service  depmod.service  desktop.service  dnsd.service  getty.service  loggerd.service  netd.service  udev-wait-drm.service  udev.service  udevd.service  user.sphere
configs/xkb/: qwerty
control/: Cargo.toml  README.md
control/src/listen/: socket.rs
cpio/: Cargo.toml
cpio/src/: lib.rs
depmod/: Cargo.toml
depmod/src/: main.rs
desktop/: Cargo.toml
desktop/src/: main.rs
dns/: Cargo.toml
dns/dnsd/src/: main.rs
dns/dnsl/src/: lib.rs  message.rs  resolver.rs
elf/: Cargo.toml
elf/src/lib/: lib.rs  structs.rs
escapes/: Cargo.toml  README.md
escapes/escapes-derive/: Cargo.toml
escapes/escapes-derive/src/: lib.rs
escapes/src/: lib.rs
getty/: Cargo.toml
getty/src/: main.rs
loggerd/: Cargo.toml
loggerd/src/lib/: control.rs  disk.rs  mod.rs
login/: Cargo.toml
login/src/: main.rs
ls/: Cargo.toml
ls/src/: main.rs
mkdir/: Cargo.toml
mkdir/src/: main.rs
modprobe/: Cargo.toml
modprobe/src/lib/: lib.rs
mount/: Cargo.toml
mount/src/: main.rs
net/: Cargo.toml
netlink/: Cargo.toml
netlink/src/: async_socket.rs  error.rs  lib.rs  macros.rs  rtnetlink.rs
netlink/src/rtnetlink/: address.rs  interface.rs  mod.rs  parsing.rs  route.rs
notes/: 00-README.md  01-getting-something-booting.md  02-creating-an-initramfs.md  03-creating-a-shell.md  04-mounting.md  05-qinit.md  06-getty.md  07-loggerd.md  08-uevents.md
qinit/: Cargo.toml
qinit/src/: main.rs  service.rs  switchroot.rs
qinit/src/config/: graph.rs  mod.rs  service.rs
qinit/testdata/basic-service/: getty.service
qinit/testdata/dependant-service/: getty.service
qinit/testdata/dependant-sphere/: base.sphere  base1.sphere  base2.sphere  base3.sphere
qinit/testdata/invalid-service/: getty.service
qinit/testdata/sphere/: base.sphere  udev.service
qsh/: Cargo.toml
qsh/src/: buffer.rs  main.rs  process.rs  shell.rs
qsh/src/parser/: consumers.rs  mod.rs  types.rs
qsh/src/shell/: builtins.rs  mod.rs
qui/: Cargo.toml
qui/src/: app.rs  buffer.rs  canvas.rs  context.rs  keyboard.rs  layer_surface.rs  lib.rs  scene.rs  xkb.rs
qui/src/font/: bdf.rs  mod.rs
qui/src/widgets/: button.rs  mod.rs
qui/src/xkb/: keysym.rs  mod.rs
qui/testdata/xkb/: weston.txt
scripts/: qemu-tap-wifi.sh
superblocks/: Cargo.toml  README.md
superblocks/src/: btrfs.rs  ext.rs  lib.rs  types.rs
switchroot/: Cargo.toml
switchroot/src/: main.rs  switchroot.rs
tables/: Cargo.toml
tables/src/: columntable.rs  lib.rs  rowtable.rs
terminal/: Cargo.toml
terminal/src/: main.rs
udev/: Cargo.toml
udev/src/: main.rs
udevd/: Cargo.toml
udevd/src/: main.rs
wayland/: Cargo.toml
wayland/src/: buffer.rs  compositor.rs  connection.rs  display.rs  keyboard.rs  lib.rs  output.rs  pointer.rs  registry.rs  seat.rs  shm.rs  shm_pool.rs  surface.rs  types.rs  xdg_surface.rs  xdg_toplevel.rs  xdg_wm_base.rs  zwlr_layer_shell_v1.rs
wl-test/: Cargo.toml
wl-test/assets/: ter-u16n.bdf
wl-test/src/: main.rs
