[workspace]
resolver = "2"

members = [
    "assemble-initramfs",
    "bytestruct",
    "bytestruct/bytestruct-derive",
    "cpio",
    "escapes",
    "escapes/escapes-derive",
    "mount",
    "qinit",
    "qsh",
    "superblocks"
]

[workspace.dependencies]
clap = "4.4"
rand = "0.8"
slog = "2.7"
slog-async = "2.8"
slog-json = "2.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
nix = { version = "0.27", features = ["fs", "term", "process", "signal", "user"] }
thiserror = "1.0"
