[workspace]
resolver = "2"

members = [
    "assemble-fs",
    "auth",
    "bytestruct",
    "bytestruct/bytestruct-derive",
    "common",
    "cpio",
    "escapes",
    "escapes/escapes-derive",
    "getty",
    "ls",
    "loggerd",
    "login",
    "mount",
    "mkdir",
    "qinit",
    "qsh",
    "superblocks",
    "switchroot",
    "tables", "control", 
]

[workspace.dependencies]
clap = "4.4"
rand = "0.8"
slog = "2.7"
slog-async = "2.8"
slog-json = "2.6"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
nix = { version = "0.27", features = ["fs", "term", "process", "signal", "user"] }
thiserror = "1.0"
anyhow = "1.0"
toml = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
chrono = "0.4"