[package]
name = "assemble-initramfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive"] }
cpio = "0.2.2"
rand = { workspace = true }
slog = { workspace = true }
slog-async = { workspace = true }
slog-json = { workspace = true }
