[package]
name = "compositor"
version = "0.1.0"
edition = "2024"

[dependencies]
nix = { workspace = true, features = ["mman", "poll", "event", "time"] }
bitflags = { workspace = true }
thiserror = { workspace = true }
bytestruct = { path = "../bytestruct" }
bytestruct-derive = { path = "../bytestruct/bytestruct-derive" }
wayland = { path = "../wayland" }
common = { path = "../common" }