[package]
name = "loggerd"
version = "0.1.0"
edition = "2021"

[lib]
name = "loggerd"
path = "src/lib/mod.rs"

[[bin]]
name = "loggerd"
path = "src/bin/loggerd/main.rs"

[[bin]]
name = "logctl"
path = "src/bin/logctl/main.rs"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
slog = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
common = { path = "../common" }
bytestruct = { path = "../bytestruct", features=["time"]  }
bytestruct-derive = { path = "../bytestruct/bytestruct-derive" }
control = { path = "../control" }
tokio-serde = "0.9"