[package]
name = "net"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "netc"
path = "src/bin/netc/main.rs"

[[bin]]
name = "netd"
path = "src/bin/netd/main.rs"

[dependencies]
netlink = { path = "../netlink" }
clap = { workspace = true }
tables = { path = "../tables" }
common = { path = "../common" }
slog = { workspace = true }