[package]
name = "netlink"
version = "0.1.0"
edition = "2021"

[dependencies]
bytestruct = { path = "../bytestruct" }
bytestruct-derive = { path = "../bytestruct/bytestruct-derive" }
bitflags = { workspace = true }
nix = { workspace = true, features = ["socket"] }
tokio = { workspace = true, optional = true }
common = { path = "../common" }
thiserror = { workspace = true }

[features]
default = ["async"]
async = ["dep:tokio"]
