[package]
name = "qinit"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
common = { path = "../common" }
slog = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
auth = { path = "../auth" }
control = { path = "../control" }
clap = { workspace = true }
loggerd = { path = "../loggerd" }