[package]
name = "qsh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { workspace = true }
once_cell = "1.19.0"
slog = { workspace = true }
slog-async = { workspace = true }
slog-json = { workspace = true }
escapes = { path = "../escapes" }
thiserror = { workspace = true }
common = { path = "../common" }
