[package]
name = "superblocks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
bytestruct = { path = "../bytestruct" }
bytestruct-derive = { path = "../bytestruct/bytestruct-derive" }
